# OpenLetterRecognition

./: CMakeCache.txt  CMakeLists.txt  LetterFacade.cpp  LetterFeatureExtractor.cpp  LetterFeatureExtractor.h  LetterFineExclusioner.cpp  LetterFineExclusioner.h  LetterIdentificationer.cpp  LetterIdentificationer.h  LetterIdentifier.cpp  LetterImageCreator.cpp  LetterImageCreator.h  LetterLabelCreator.cpp  LetterLabelCreator.h  LetterRecognition  LetterRecognizer.cpp  LetterRecognizer.h  LetterTrashCleaner.cpp  LetterTrashCleaner.h  LetterVoronoiSpecificer.cpp  LetterVoronoiSpecificer.h  Makefile  cmake_install.cmake  simple_start.sh
